Changed h1 title, main copy, flex copy, background color

--- a/index.html
+++ b/index.html
@@ -22,18 +22,46 @@
 
         <!-- Add your site or application content here -->
         <section class="flex-container">
-            <header>Header</header>
-            <main>Main</main>
+            <header>Hi...I'm Dan!!</header>
+            <main>
+                <p>I am on the path to become a <span>Responsive Designer & Developer</span> who is fully commited to learning how to provide the best user experience possible on any device.  When I'm not neck deep in codes and hammering on the keyboard I can be found spending time with my family, walking in the great outdoors, and chicken pickin' on my six string. Here are some words from a great band:</p>
+            </main>
             <div id="div-1" class="flex-items">
-                Div 1
+                <p>Hold on, slow down, again from the top now
+                    and tell me everything.
+                    I know I've been gone for, what seems like forever
+                    but I'm here now waiting.
+                    To convince you that I'm not a ghost or a stranger,
+                    but closer than you think.
+                    She said, "Just go on to what you
+                    pretend is your life but, please don't die on me!"</p>
             </div>
             <div id="div-2" class="flex-items">
-                Div 2
+                <p>Wings won't take me,
+                    heights don't faze me,
+                    so take a step,
+                    but don't look down, take a step!
+                    Now I'm standing on the rooftop, ready to fall!
+                    I think I'm at the edge now but I could be wrong!
+                    I'm standing on the rooftop, ready to fall!</p>
             </div>
             <div id="div-3" class="flex-items">
-                Div 3
+                <p>Perpetual motion, the image won't focus
+                    a blur is all that's seen.
+                    But here in this moment, like the eye of a storm
+                    it all came clear to me.
+                    I found a shoulder to lean on,
+                    an infallible reason to live all by itself.
+                    I took one last look
+                    from the heights that I once loved
+                    and then I ran like hell!</p>
             </div>
-            <footer>Footer</footer>
+            <footer>Find me on GitHub, LinkedIn, and Facebook</footer>
+                <!--<ul  id="social-media">
+                    <li><a href="https://www.instagram.com" target="blank"><img src="img/instagram.png" alt="Instagram"></a></li>
+                    <li><a href="https://www.linkedin.com/in/danchristiansen/" target="blank"><img src="img/linkedin.png" alt="LinkedIn"></a></li>
+                    <li><a href="https://github.com/TheRealDC" target="blank"><img src="img/github.png" alt="GitHub"></a></li>
+                </ul>-->
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
